Fix image width on small screen

--- a/src/components/Link.css
+++ b/src/components/Link.css
@@ -1,6 +1,6 @@
 .preview {
     display: block;
-    max-width: 800px;
+    max-width: 100%;
     max-height: 800px;
     margin: 0.5em 0 0.25em 0;
 }
